--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-streamlit
 pandas
 numpy
-scikit-learn
 plotly
-openpyxl 
+openpyxl
+dash
+dash-bootstrap-components
+plotly-resampler
+scikit-learn
